fix: wrong channel quick reply message

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
 ADMIN_ROLE_ID=1004118272893009930
 GUIDELINES_CHANNEL_ID=883264995603935272
+HELP_CHANNEL_ID=1080807837833384017
 CLIENT_ID=
 TOKEN=
